OpenLDAP 2.4 Change Log

OpenLDAP 2.4.24 Engineering
	Added contrib/kinit for kerberos tickets
	Added contrib/noopsrch for entry counting (ITS#6598)
	Added slapadd attribute value checking (ITS#6592)
	Added slapcat continue mode for problematic DBs (ITS#6482)
	Added slapd-null back-config support (ITS#6624)
	Added slapd-sql autocommit support (ITS#6612)
	Added slapd-sql support for long long keys (ITS#6617)
	Fixed liblber to not close invalid sockets (ITS#6585)
	Fixed liblber error setting (ITS#6732)
	Fixed liblber memory debugging (ITS#6733)
	Fixed libldap dnssrv port format specifier (ITS#6644)
	Fixed libldap EOF handling (ITS#6723)
	Fixed libldap GnuTLS hang on socket close (ITS#6673)
	Fixed libldap sasl partial write handling (ITS#6639)
	Fixed libldap referral chasing (ITS#6602)
	Fixed libldap leak when chasing referrals (ITS#6744)
	Fixed libldap url parsing with NULL host (ITS#6653)
	Fixed liblutil getpass prompts (ITS#6702)
	Fixed ldapsearch segfault with deref (ITS#6638)
	Fixed ldapsearch multiple controls parsing (ITS#6651)
	Fixed slapd acl parsing overflow (ITS#6611)
	Fixed slapd support for BDB 5.0+ (ITS#6698)
	Fixed slapd config leak with olcDbDirectory (ITS#6634)
	Fixed slapd to free controls if needed (ITS#6629)
	Fixed slapd filter leak (ITS#6635)
	Fixed slapd matching rules for strict ordering (ITS#6722)
	Fixed slapd extensible match for ordering rules (ITS#6532)
	Fixed slapd when first acl is value dependent (ITS#6693)
	Fixed slapd modify to return actual error (ITS#6581)
	Fixed slapd sortvals of attributes with 1 value (ITS#6715)
	Fixed slapd syncrepl reuse of presence list (ITS#6707)
	Fixed slapd syncrepl unitialized return code (ITS#6719)
	Fixed slapd-bdb hasSubordinates generation (ITS#6712)
	Fixed slapd-bdb entry cache delete failure (ITS#6577)
	Fixed slapd-bdb error propogation to overlays (ITS#6633)
	Fixed slapd-ldap debug output of timeout (ITS#6721)
	Fixed slapd-ldap DNSSRV referral chaining (ITS#6565)